--- a/03-MY451_3.rmd
+++ b/03-MY451_3.rmd
@@ -338,11 +338,10 @@ Table \@ref(tab:t-attitude) on page \pageref{t_attitude}.
                                            (16.00)                                   (46.16)       (18.48)      (15.40)     (3.96)         (100)
   -------- ----------------------------------------------------------------------- ----------- --------------- ---------- ---------- -----------
 
-  : *``The government should take measures to reduce differences in income levels''*: Attitude towards income redistribution by sex, in a hypothetical
+  : (\#tab:t-sex-attitude-pop) *``The government should take measures to reduce differences in income levels''*: Attitude towards income redistribution by sex, in a hypothetical
   population of 50 million people. The numbers in the table are
   frequencies in millions of people, row percentages (in parentheses)
-  and overall percentages \[in square brackets\].<span
-  data-label="tab:t-sex-attitude-pop"></span>
+  and overall percentages \[in square brackets\].
 
 Imagine now that the full population consisted of 50 million people, and
 that the values of the two variables for them were as shown in Table
