--- a/05-MY451_5.rmd
+++ b/05-MY451_5.rmd
@@ -115,7 +115,7 @@ possible census error in it).
                                                                                                                                                                       0.127)
   --------------------------------------------------------------------------------------------------------------------------------------------------------------------------
 
-  : Examples of analyses of population proportions used in Chapter
+  : (\#tab:t-probex) Examples of analyses of population proportions used in Chapter
   \@ref(c-probs). In addition to sample sizes $n$ and proportions
   $\hat{\pi}$, the table shows for the one-sample examples 5.1 and 5.2
   the $z$-test statistic for the hypothesis $H_{0}: \pi=\pi_{0}$, its
@@ -124,8 +124,7 @@ possible census error in it).
   shows the estimated between-group difference of proportions
   $\hat{\Delta}$, the $z$-test statistic for the hypothesis
   $H_{0}: \Delta=0$, its $P$-value against a two-sided alternative, and
-  a 95% confidence interval for $\Delta$. <span
-  data-label="tab:t-probex"></span>
+  a 95% confidence interval for $\Delta$.
 
 
 **Example 5.3: The Salk polio vaccine field trial of 1954**
@@ -468,16 +467,11 @@ sufficient.
 When the sample size is large enough, the sampling distribution of $z$
 defined by (\@ref(ztestp)) is approximately the **standard normal
 distribution**. The probability curve of this distribution is shown in
-Figure \@ref(f-pval-prob). For now we just take it as given, and postpone
+Figure \@ref(fig:f-pval-prob). For now we just take it as given, and postpone
 a general discussion of the normal distribution until Chapter
 \@ref(c-means).
 
-![ Illustration of the calculation of $P$-values from the standard
-normal distribution. Here the value of the $z$-test statistic is
-$z=-1.59$ (as in the referendum example 5.1). The areas in grey indicate
-the two-sided $P$-values, i.e. the probabilities of values at least as
-far from 0 as the observed value of $z$. <span
-data-label="fig:f-pval-prob"></span>](pval_zp){width="10cm"}
+![(\#fig:f-pval-prob) Illustration of the calculation of $P$-values from the standard normal distribution. Here the value of the $z$-test statistic is $z=-1.59$ (as in the referendum example 5.1). The areas in grey indicate the two-sided $P$-values, i.e. the probabilities of values at least as far from 0 as the observed value of $z$.](pval_zp){width="10cm"}
 
 The $P$-value of the test is calculated from this distribution using the
 general principles introduced in Section \@ref(ss-tables-chi2test-Pval).
@@ -521,7 +515,7 @@ standard normal sampling distribution of the test statistic under
 $H_{0}$.
 
 This calculation of the $P$-value is illustrated graphically in Figure
-\@ref(f-pval-prob). The curve in the plot is that of the standard normal
+\@ref(fig:f-pval-prob). The curve in the plot is that of the standard normal
 distribution. Two areas are shown in grey under the curve, one on each
 tail of the distribution. The one on the left corresponds to values of
 $-1.59$ and smaller, and the one on the right to values of 1.59 or
@@ -534,7 +528,7 @@ than the $z=-1.59$ that was actually observed in Example 5.1.
 
 In example 5.2 the observed test statistic was $z=-16.71$. The two-sided
 $P$-value is then the probability of values that are at most $-16.71$ or
-at least 16.71. These areas are not shown in Figure \@ref(f-pval-prob)
+at least 16.71. These areas are not shown in Figure \@ref(fig:f-pval-prob)
 because they would not be visible in it. The horizontal axis of the
 figures runs from $-4$ to $+4$, so $-16.71$ is clearly far in the tail
 of the distribution and the corresponding probability is very small; we
@@ -555,7 +549,7 @@ because positive values of the test statistic (corresponding to sample
 differences greater than 0) would not be regarded as evidence in favour
 of the claim that $\Delta$ is smaller than 0. The $P$-value is thus only
 the probability corresponding to the area on the left tail of the curve
-in Figure \@ref(f-pval-prob), and the corresponding area on the right
+in Figure \@ref(fig:f-pval-prob), and the corresponding area on the right
 tail is not included. Since both areas have the same size, the one-sided
 $P$-value is half the two-sided value, i.e. 0.056 instead of 0.112. In
 general, the one-sided $P$-value for a $z$-test of a proportion and
@@ -574,7 +568,7 @@ direction of the alternative hypothesis” as required by the definition
 on page \pageref{p_pval_ref}, since they agree with the alternative
 hypothesis (negative values of $z$) or at least disagree with it less
 than the observed $z$ (positive values from 0 to 1.59). In Figure
-\@ref(f-pval-prob), these values would correspond to the area under the
+\@ref(fig:f-pval-prob), these values would correspond to the area under the
 whole curve, apart from the region to the right of $1.59$ on the right
 tail. Since the probability of the latter is 0.056 and the total
 probability under the curve is 1, the required probability is
@@ -612,13 +606,12 @@ books.
   Critical value     1.282   1.645   1.960   2.326   2.576   3.090    3.291
   ---------------- ------- ------- ------- ------- ------- ------- --------
 
-  : A table of critical values for the standard normal distribution. The
+  : (\#tab:t-ttable) A table of critical values for the standard normal distribution. The
   upper part of the table shows the critical values in one row, as in
   standard statistical tables (see the last row of the table on page
   \pageref{s_disttables_t}). The lower part of the table includes the
   same numbers rearranged to show critical values for conventional
-  significance levels for one- and two-sided tests. <span
-  data-label="tab:t-ttable"></span>
+  significance levels for one- and two-sided tests.
 
   ------------------------------------ ------------------------------------------ ------ ------ -------
                                                               Significance levels               
@@ -626,14 +619,6 @@ books.
   Two-sided                                                                  1.65   1.96   2.58    3.29
   One-sided                                                                  1.28   1.65   2.33    3.09
   ------------------------------------ ------------------------------------------ ------ ------ -------
-
-  : A table of critical values for the standard normal distribution. The
-  upper part of the table shows the critical values in one row, as in
-  standard statistical tables (see the last row of the table on page
-  \pageref{s_disttables_t}). The lower part of the table includes the
-  same numbers rearranged to show critical values for conventional
-  significance levels for one- and two-sided tests. <span
-  data-label="tab:t-ttable"></span>
 
 The columns of the first part of Table \@ref(tab:t-ttable) are labelled
 “Right-hand tail probabilities”, with separate columns for some values
@@ -681,7 +666,7 @@ absolute value of which is smaller than even the critical value 1.65 for
 the 10% significance level. For this example, we would report $P>0.1$.
 
 The intuitive idea of the critical values and their connection to the
-$P$-values is illustrated for Example 5.1 by Figure \@ref(f-pval-prob) on
+$P$-values is illustrated for Example 5.1 by Figure \@ref(fig:f-pval-prob) on
 page \pageref{f_pval_prob}. Here the observed test statistic is
 $t=-1.59$, so the two-sided $P$-value is the probability of values at
 least 1.59 or at most $-1.59$, which correspond to the two gray areas in
@@ -794,7 +779,7 @@ $\hat{\pi}$ is the sample proportion corresponding to $\pi$. Suppose
 that the conditions on the sample size $n$ that were discussed in
 Section \@ref(ss-probs-test1sample-samplingd) are again satisfied.
 
-Consider now Figure \@ref(f-pval-prob} on \pageref{f-pval-prob). One of
+Consider now Figure \@ref(fig:f-pval-prob} on \pageref{f-pval-prob). One of
 the results illustrated by it is that if $\pi_{0}$ is the true value of
 of the population probability $\pi$, so that $\Delta=\pi-\pi_{0}=0$,
 there is a probability of 0.95 that for a randomly drawn sample from the
@@ -916,11 +901,10 @@ also shown in Table \@ref(tab:t-ciq).
   Multiplier $z_{\alpha/2}$                                       1.64   1.96   2.58
   --------------------------- ---------------------------------------- ------ ------
 
-  : Multipliers $z_{\alpha/2}$ used to obtain confidence intervals based
+  : (\#tab:t-ciq) Multipliers $z_{\alpha/2}$ used to obtain confidence intervals based
   on the normal distribution, for three standard confidence levels.
   These values are substituted for $z_{\alpha/2}$ in formula
-  (\@ref(ci-D-gen)) to obtain the confidence interval.<span
-  data-label="tab:t-ciq"></span>
+  (\@ref(ci-D-gen)) to obtain the confidence interval.
 
 A confidence interval contains, loosely speaking, those numbers which
 are considered plausible values for the unknown population difference
@@ -1229,7 +1213,7 @@ children than among the unvaccinated ones. The 95% confidence interval
 for the difference shows that we are 95% confident that this difference
 was a reduction of between 284 and 560 polio cases per million
 children[^6]. This was acknowledged as a convincing demonstration that
-the Salk vaccine worked (see Figure \@ref(f-nytimes)), and it (and later
+the Salk vaccine worked (see Figure \@ref(fig:f-nytimes)), and it (and later
 other types of polio vaccination) was soon put to widespread use. The
 resulting dramatic decline in the incidence of polio is one of the great
 success stories of modern medicine. Compared to the 199 children with
@@ -1240,8 +1224,7 @@ the whole world (see
 is hope that that number will reach 0 in a not-too-distant future, so
 that the once devastating disease will one day be entirely eradicated.
 
-![Public reaction to statistical inference.<span
-data-label="fig:f-nytimes"></span>](salk_nytimes){width="150mm"}
+![(\#fig:f-nytimes) Public reaction to statistical inference.](salk_nytimes){width="150mm"}
 
 [^1]: This example is based on a newspaper report of a real poll for
     which the percentages were reported only as 47, 27, and 26 out of
